--- a/anemone_coffee/package.json
+++ b/anemone_coffee/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "i18next": "^23.6.0",
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
