--- a/anemone_coffee/package.json
+++ b/anemone_coffee/package.json
@@ -20,6 +20,7 @@
     "intersection-observer": "^0.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
