--- a/anemone_coffee/package.json
+++ b/anemone_coffee/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
