--- a/anemone_coffee/server/package.json
+++ b/anemone_coffee/server/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.13"
   },
