--- a/anemone_coffee/server/package.json
+++ b/anemone_coffee/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@notionhq/client": "^3.1.3",
     "axios": "^1.7.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
